Sat Jul 29 16:48:05 1995  James Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (install-local), contrib/Makefile.in (install):
	Remove "reminder" to run cvsinit; running cvsinit is not required.

Fri Jul 28 16:46:10 1995  James Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (SUBDIRS): Comment out windows-NT.

Fri Jul 28 02:27:54 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* Makefile.in (DISTFILES): Add cvsnt.mak and cvsnt.vcp.
	(SUBDIRS): Add windows-NT.

	* config.h.in: Regenerated from configure.in by autoheader.

Wed Jul 19 18:00:00 1995  Jim Blandy  <jimb@cyclic.com>

	* configure.in (AC_CHECK_HEADERS): Check for <io.h> and <direct.h>.

Tue Jul 18 21:18:00 1995  Jim Blandy  <jimb@cyclic.com>

	* configure.in (AC_CHECK_HEADERS): Check for sys/param.h; Windows NT
	doesn't have it.

	* configure.in (AC_CHECK_HEADERS): Check for sys/time.h.  If you're
	using AC_HEADER_TIME, it's best to check for this too.
	
	* cvsnt.mak: New file --- makefile equivalent for Microsoft Visual C++.
	Choose this as your project when working with CVS under MSVC++.
	* cvsnt.vcp: New file --- configuration info for Microsoft Visual C++.
	* windows-NT: New subdirectory, containing files to be used to
	build under Microsoft Windows NT.

Wed Jul 12 23:26:24 1995  James Kingdon	 <kingdon@harvey.cyclic.com>

	* Makefile.in: Remove duplicate install-info rule.

Wed Jul 12 16:00:27 1995 Karl Fogel <kfogel@floss.cyclic.com>

	* Makefile.in (install-local): added rule for install-info, made
	`install' depend on it.

	* README: correct mailing list addresses.
	* INSTALL: same.

Wed Jul 12 09:15:02 1995  Jim Meyering	(meyering@comco.com)

	* configure.in (gdiff_path): Remove gdiff from the list of programs.
	SGI's Irix includes a program named gdiff that is an X-based GUI to
	diff.

	* configure.in: Add check for working fnmatch functions so that
	systems providing it don't incur the space overhead of linking
	with the version in lib.  Cross compiling builds always use the